--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -10,6 +10,7 @@ on:
       - 'histcite/*'
   pull_request:
     branches: [ "main" ]
+  workflow_dispatch:
 
 jobs:
   build:
@@ -27,9 +28,13 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        python -m pip install pytest
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - name: Test with pytest
+        python -m pip install pytest pytest-cov
+        python -m pip install pandas>=2.0 pyarrow openpyxl
+    - name: Test with pytest and generate coverage report
       run: |
-        pytest
+        python -m pytest --cov=histcite --cov-report=xml
+    - name: Upload coverage to Codecov
+      if matrix.python-version == '3.9'
+      uses: codecov/codecov-action@v3
+      env:
+        CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
