--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -34,7 +34,7 @@ jobs:
       run: |
         python -m pytest --cov=histcite --cov-report=xml
     - name: Upload coverage to Codecov
-      if matrix.python-version == '3.9'
+      if: matrix.python-version == '3.9'
       uses: codecov/codecov-action@v3
       env:
         CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
