--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,20 +1,22 @@
-ci:
-  autoupdate_schedule: quarterly
+exclude: 'examples/|tests/data/'
+
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.4.0
+    rev: v4.5.0
     hooks:
-    -   id: check-toml
+     - id: check-toml
+     - id: check-yaml
+     - id: end-of-file-fixer
+     - id: trailing-whitespace
+       args: [--markdown-linebreak-ext=md]
 
   - repo: https://github.com/psf/black
-    rev: 23.7.0
+    rev: 23.9.1
     hooks:
      - id: black
-     - id: black-jupyter
 
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.0.285
+    rev: v0.0.291
     hooks:
       - id: ruff
         args: [ --fix, --exit-non-zero-on-fix]
-        types_or: [python, jupyter]
