--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -8,7 +8,7 @@ body:
     id: problem
     attributes:
       label: 问题描述
-      description: 请简要描述您遇到的问题。
+      description: 请简要描述你遇到的问题。
     validations:
       required: false
 
