--- a/.github/workflows/pypi-publish.yml
+++ b/.github/workflows/pypi-publish.yml
@@ -1,5 +1,4 @@
-# This workflow will upload a Python Package using Twine when a release is created.
-# This workflow uses PyPi Trusted Publishing. https://docs.pypi.org/trusted-publishers/
+# This workflow uses PyPI Trusted Publishing. https://docs.pypi.org/trusted-publishers/
 
 name: Publish Python Package
 
@@ -13,17 +12,16 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Set up Python
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
         python-version: '3.x'
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
         pip install build
     - name: Build package
       run: python -m build
     - name: Upload artifact
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         path: ./dist
 
@@ -35,7 +33,7 @@ jobs:
       id-token: write
     steps:
       - name: Download artifact
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
       - name: Publish package distributions to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
