--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -1,6 +1,3 @@
-# This workflow will install Python dependencies, run tests and lint with a variety of Python versions
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
-
 name: Run Tests
 
 on:
@@ -13,7 +10,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  run:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
@@ -23,18 +20,25 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
-        python -m pip install pytest pytest-cov
-        python -m pip install pandas>=2.0 pyarrow openpyxl
-    - name: Test with pytest and generate coverage report
+        pip install pytest coverage
+        pip install pandas>=2.0 pyarrow openpyxl
+    - name: Run tests
+      if: matrix.python-version != '3.9'
+      run: pytest
+    - name: Generate coverage report
+      if: matrix.python-version == '3.9'
       run: |
-        python -m pytest --cov=histcite --cov-report=xml
+        coverage run -m pytest
+        coverage xml
     - name: Upload coverage to Codecov
       if: matrix.python-version == '3.9'
-      uses: codecov/codecov-action@v3
-      env:
-        CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+      uses: codecov/codecov-action@v4
+      with:
+        fail_ci_if_error: true
+        file: ./coverage.xml
+        token: ${{ secrets.CODECOV_TOKEN }}
